- добавление документации для Свагера - маленькое исправление Сервиса